# personal_site

./: .cursorrules  .gitignore  .goreleaser.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.render  README.md  go.mod  go.sum  index.html  mindmap_zoom_interaction_design.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.ts  tsconfig.json  vercel.json
.github/ISSUE_TEMPLATE/: bug-反馈--bug-report-.md  功能请求--feature-request-.md  咨询---求助--question-.md
.github/workflows/: deploy.yml  graph-apply.yml  graph-proposal.yml  render-keepalive.yml
.trae/documents/: prd.md  technical-architecture.md
automation/agent_graph/: pyproject.toml
automation/agent_graph/src/agent_graph/: __init__.py  cli.py  config.py  context_loader.py  executor.py  github_client.py  models.py  prompts.py  proposal_io.py  service.py
automation/agent_graph/tests/: test_executor.py  test_models.py
deploy/: CHECKLIST.md
deploy/cloudflare-keepalive/: worker.js  wrangler.toml.example
deploy/vps/: Dockerfile  docker-compose.yml
design-system/: MASTER.md
docs/: admin-node-management-plan.md
docs/agent-ops/: README.md
docs/plans/: 2026-05-23-tinchak-store-render-deploy.md  2026-06-09-enterprise-workstation-prd.md  2026-06-09-pro-workstation-platform-design.md  (+2 more)
public/: timeline-prototypes.html
scripts/: open-render-blueprint.bat  open-render-blueprint.py  prepare_fullstack_assets.py  push-checklist.txt  render-entrypoint.sh
src/: App.tsx  index.css  main.tsx
supabase/: restore_default_graph.sql  schema.sql  seed_edges.sql  seed_graph.sql
(+920 files in other folders)
